fixed playlist name length overflow in dropdown

--- a/app/components/Playlists/Playlists.scss
+++ b/app/components/Playlists/Playlists.scss
@@ -90,6 +90,8 @@
 .dropdown-menu>li>a {
   float:left;
   width: 80%;
+  max-width: 80%;
+  overflow-x: hidden;
 }
 
 #playlist-dropdown {
